--- a/7.1. v-model di input text.html
+++ b/7.1. v-model di input text.html
@@ -6,14 +6,21 @@
     <title>Index</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
+<style>
+    .textbiru {
+        color: blue;
+    }
+</style>
 <body>
     <div id="app">
-        <h2>User</h2>
         <div>
-            name : {{user.name}}
+            <input type="text" placeholder="username" v-model="username">
         </div>
+
         <div>
-            <img :src="user.image" :alt="'gambar bukunya ' +user.name" :style="{width: responsiveWidth}">
+            <p>
+                username : {{username}}
+            </p>
         </div>
     </div>
 
@@ -23,11 +30,7 @@
         createApp({
             data() {
                 return {
-                    user: {
-                        name: 'Rafif',
-                        image: 'https://images.unsplash.com/photo-1645541721430-c0273a0c086a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGRhbmllbCUyMHJhZGNsaWZmfGVufDB8fDB8fHww'
-                    },
-                    responsiveWidth: '400px' // tergantung ukuran layar, based on calculation
+                    username:''
                 }
             }, 
             methods: {
