--- a/7.2. v-model di text area.html
+++ b/7.2. v-model di text area.html
@@ -6,14 +6,29 @@
     <title>Index</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
+<style>
+    .textbiru {
+        color: blue;
+    }
+</style>
 <body>
     <div id="app">
-        <h2>User</h2>
         <div>
-            name : {{user.name}}
+            <input type="text" placeholder="username" v-model="username">
+            <br>
+            <label for="">Address</label>
+            <br>
+            <textarea name="" id="" cols="30" rows="10" v-model="address"></textarea>
         </div>
+
         <div>
-            <img :src="user.image" :alt="'gambar bukunya ' +user.name" :style="{width: responsiveWidth}">
+            <p>
+                Username : {{username}}
+            </p>
+
+            <p>
+                Address : {{address}}
+            </p>
         </div>
     </div>
 
@@ -23,11 +38,8 @@
         createApp({
             data() {
                 return {
-                    user: {
-                        name: 'Rafif',
-                        image: 'https://images.unsplash.com/photo-1645541721430-c0273a0c086a?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGRhbmllbCUyMHJhZGNsaWZmfGVufDB8fDB8fHww'
-                    },
-                    responsiveWidth: '400px' // tergantung ukuran layar, based on calculation
+                    username:'',
+                    address:''
                 }
             }, 
             methods: {
